fix: increase z-index of header for improved stacking context

--- a/style.css
+++ b/style.css
@@ -545,7 +545,7 @@ header {
     margin-top: 50px;
     margin-bottom: 0;
     position: relative;
-    z-index: 2;
+    z-index: 10;
 
 }
 
